Revision history for Perl extension Test::Simple

0.46
    - Noted eq_set() isn't really a set comparision.
    - Test fix, exit codes are broken on MacPerl (bleadperl@16868)
    - Make Test::Simple install itself into the core for >= 5.8
    - Small fixes to Test::Tutorial and skip examples
    * Added TB->has_plan() from Adrian Howard
    - Clarified the meaning of 'actual_ok' from TB->details

0.45  Wed Jun 19 18:41:12 EDT 2002
    - Andy Lester made the SKIP & TODO docs a bit clearer.
    - Explicitly disallowing double plans. (RT #553)
    - Kicking up the minimum version of Test::Harness to one that's
      fairly bug free.
    - Made clear a common problem with use_ok and BEGIN blocks.
    - Arthur Bergman made Test::Builder thread-safe.

0.44  Thu Apr 25 00:27:27 EDT 2002
    - names containing newlines no longer produce confusing output
      (from chromatic)
    - chromatic provided a fix so can_ok() honors can() overrides.
    - Nick Ing-Simmons suggested todo_skip() be a bit clearer about
      the skipping part.
    - Making plan() vomit if it gets something it doesn't understand.
    - Tatsuhiko Miyagawa fixed use_ok() with pragmata on older perls.
    - quieting diag(undef)

0.43  Thu Apr 11 22:55:23 EDT 2002
    - Adrian Howard added TB->maybe_regex()
    - Adding Mark Fowler's suggestion to make diag() return
      false.
    - TB->current_test() still not working when no tests were run via
      TB itself.  Fixed by Dave Rolsky.

0.42  Wed Mar  6 15:00:24 EST 2002
    - Setting Test::Builder->current_test() now works (see what happens
      when you forget to test things?)
    - The change in is()'s undef/'' handling in 0.34 was an API change, 
      but I forgot to declare it as such.
    - The apostrophilic jihad attacks!  Philip Newtons patch for
      grammar mistakes in the doc's.

0.41  Mon Dec 17 22:45:20 EST 2001
    * chromatic added diag()
    - Internal eval()'s sometimes interfering with $@ and $!.  Fixed.
