@@ -12,6 +12,7 @@ t/More.t
 t/bad_plan.t
 t/buffer.t
 t/curr_test.t
+t/details.t
 t/diag.t
 t/exit.t
 t/extra.t
